# NexusParse

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  loom_script.md  pyproject.toml
.github/workflows/: main.yml
api/: Dockerfile  auth.py  celery_app.py  main.py  minio_client.py  requirements.txt
api/routes/: __init__.py  extraction.py
db/: init.sql
tests/: test_api.py  test_worker.py
worker/: Dockerfile  database.py  llm_chains.py  main.py  minio_client.py  requirements.txt  schemas.py  tasks.py
